WIP data analyzing

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -11,11 +11,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /home/manzi/anaconda3/lib/python3.8/site-packages (2.24.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
+      "Requirement already satisfied: requests in /home/manzi/.anaconda3/lib/python3.8/site-packages (2.24.0)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -191,9 +191,9 @@
    "source": [
     "def youtube_downloader(url_file_path):\n",
     "    # Invoke external YouTube downloader with YouTube URL file\n",
-    "    bashCommand = \"youtube-dl -a {0} -j > output_video_traces.temp\".format(url_file_path)\n",
+    "    bashCommand = \"youtube-dlc -a {0} -j > output_video_traces.temp\".format(url_file_path)\n",
     "\n",
-    "    print(\"-->Running youtube-dl: {0}\".format(bashCommand))\n",
+    "    print(\"-->Running youtube-dlc: {0}\".format(bashCommand))\n",
     "\n",
     "    !{bashCommand}\n",
     "    \n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -294,37 +294,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running youtube-dl: youtube-dl -a videos/1607429747.592078.csv -j > output_video_traces.temp\n",
-      "Processed 3 out of 1000 search pages. Found and stored 5 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429753.5197492.csv -j > output_video_traces.temp\n",
-      "Processed 4 out of 1000 search pages. Found and stored 7 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429757.93767.csv -j > output_video_traces.temp\n",
-      "Processed 5 out of 1000 search pages. Found and stored 10 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429762.793486.csv -j > output_video_traces.temp\n",
-      "Processed 6 out of 1000 search pages. Found and stored 12 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429769.434012.csv -j > output_video_traces.temp\n",
-      "Processed 8 out of 1000 search pages. Found and stored 15 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429774.36975.csv -j > output_video_traces.temp\n",
-      "Processed 9 out of 1000 search pages. Found and stored 19 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429780.222069.csv -j > output_video_traces.temp\n",
-      "Processed 10 out of 1000 search pages. Found and stored 26 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429787.033859.csv -j > output_video_traces.temp\n",
-      "Processed 11 out of 1000 search pages. Found and stored 30 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429792.58175.csv -j > output_video_traces.temp\n",
-      "Processed 12 out of 1000 search pages. Found and stored 31 video traces so far.\n",
-      "HTTP not OK: b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n    \"errors\": [\\n      {\\n        \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n        \"domain\": \"youtube.quota\",\\n        \"reason\": \"quotaExceeded\"\\n      }\\n    ]\\n  }\\n}\\n'\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-42715d47b303>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprocessed_video_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdo_work\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"360 sports\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-12-eb04c2582929>\u001b[0m in \u001b[0;36mdo_work\u001b[0;34m(search_term, page_limit)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;31m# Find which of our video IDs refer to 360 videos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mvideo_details_item\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvideo_details\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mvideo_details_item\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'contentDetails'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'projection'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"360\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m                 \u001b[0;31m# This is not a 360 video; remove it from the set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "Processed [1/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [2/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [3/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [4/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [5/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [6/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [7/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [8/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [9/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [10/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [11/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [12/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [13/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [14/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [15/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [16/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [17/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [18/20] search pages. Found and stored [0] video traces so far.\n",
+      "Processed [19/20] search pages. Found and stored [0] video traces so far.\n",
+      "Execution interrupted: HTTP not OK: b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n    \"errors\": [\\n      {\\n        \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n        \"domain\": \"youtube.quota\",\\n        \"reason\": \"quotaExceeded\"\\n      }\\n    ]\\n  }\\n}\\n'\n"
      ]
     }
    ],
@@ -335,7 +324,7 @@
     "try:\n",
     "    \n",
     "    # Execute the program\n",
-    "    do_work(\"rollercoaster\", 20, video_ids_cache)\n",
+    "    do_work(\"music\", 20, video_ids_cache)\n",
     "    \n",
     "except Exception as e:\n",
     "    print(\"Execution interrupted: {0}\".format(e))"
@@ -351,7 +340,7 @@
      "output_type": "stream",
      "text": [
       "Writing found video IDs to cache...\n",
-      "Done. Total video traces cached: [32]\n"
+      "Done. Total video traces cached: [245]\n"
      ]
     }
    ],
