fixed encoding issue on windows

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -11,17 +11,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /home/manzi/anaconda3/lib/python3.8/site-packages (2.24.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
+      "Requirement already satisfied: requests in c:\\users\\omer_\\anaconda3\\lib\\site-packages (2.24.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\omer_\\anaconda3\\lib\\site-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\omer_\\anaconda3\\lib\\site-packages (from requests) (2.10)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\omer_\\anaconda3\\lib\\site-packages (from requests) (1.25.11)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\omer_\\anaconda3\\lib\\site-packages (from requests) (2020.6.20)\n",
+      "\n",
+      "Requirement already satisfied: youtube-dl in c:\\users\\omer_\\anaconda3\\lib\\site-packages (2020.12.14)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install requests"
+    "%pip install requests\n",
+    "%pip install youtube-dl\n"
    ]
   },
   {
@@ -43,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"AIzaSyDlrOVHZ8stkQCS52a1qf2f06zrvwnVPGw\""
+    "API_KEY = \"AIzaSyAwhEJyDJ02IIIrcgZo4GLU7M7_MaoqL3E\""
    ]
   },
   {
@@ -63,7 +66,7 @@
    "outputs": [],
    "source": [
     "def read_json_from_file(directory, filename):\n",
-    "    with open(os.path.join(directory, filename)) as json_file:\n",
+    "    with open(os.path.join(directory, filename), encoding=\"utf-8\") as json_file:\n",
     "        data = json.load(json_file)\n",
     "        \n",
     "    return data"
@@ -82,7 +85,7 @@
     "    if (filename is None):\n",
     "        filename = '{0}.json'.format(time.time())\n",
     "\n",
-    "    with open(os.path.join(directory, filename), 'w') as f:\n",
+    "    with open(os.path.join(directory, filename), 'w', encoding=\"utf-8\") as f:\n",
     "        json.dump(data, f, ensure_ascii=False)"
    ]
   },
@@ -100,7 +103,7 @@
     "    \n",
     "    file_path = os.path.join(directory, filename)\n",
     "    \n",
-    "    with open(file_path, 'w') as f:\n",
+    "    with open(file_path, 'w', encoding=\"utf-8\") as f:\n",
     "        for item in video_ids:\n",
     "            f.write(\"http://www.youtube.com/watch?v={0}\".format(item))\n",
     "            f.write(\"\\r\\n\")\n",
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -294,37 +297,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running youtube-dl: youtube-dl -a videos/1607429747.592078.csv -j > output_video_traces.temp\n",
-      "Processed 3 out of 1000 search pages. Found and stored 5 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429753.5197492.csv -j > output_video_traces.temp\n",
-      "Processed 4 out of 1000 search pages. Found and stored 7 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429757.93767.csv -j > output_video_traces.temp\n",
-      "Processed 5 out of 1000 search pages. Found and stored 10 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429762.793486.csv -j > output_video_traces.temp\n",
-      "Processed 6 out of 1000 search pages. Found and stored 12 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429769.434012.csv -j > output_video_traces.temp\n",
-      "Processed 8 out of 1000 search pages. Found and stored 15 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429774.36975.csv -j > output_video_traces.temp\n",
-      "Processed 9 out of 1000 search pages. Found and stored 19 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429780.222069.csv -j > output_video_traces.temp\n",
-      "Processed 10 out of 1000 search pages. Found and stored 26 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429787.033859.csv -j > output_video_traces.temp\n",
-      "Processed 11 out of 1000 search pages. Found and stored 30 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607429792.58175.csv -j > output_video_traces.temp\n",
-      "Processed 12 out of 1000 search pages. Found and stored 31 video traces so far.\n",
-      "HTTP not OK: b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n    \"errors\": [\\n      {\\n        \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n        \"domain\": \"youtube.quota\",\\n        \"reason\": \"quotaExceeded\"\\n      }\\n    ]\\n  }\\n}\\n'\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-42715d47b303>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprocessed_video_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdo_work\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"360 sports\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-12-eb04c2582929>\u001b[0m in \u001b[0;36mdo_work\u001b[0;34m(search_term, page_limit)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;31m# Find which of our video IDs refer to 360 videos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mvideo_details_item\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvideo_details\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mvideo_details_item\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'contentDetails'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'projection'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"360\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m                 \u001b[0;31m# This is not a 360 video; remove it from the set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "->Downloading [25] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129023.0028107.csv -j > output_video_traces.temp\n",
+      "Processed [1/20] search pages. Found and stored [25] video traces so far.\n",
+      "->Downloading [17] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129040.1893685.csv -j > output_video_traces.temp\n",
+      "Processed [2/20] search pages. Found and stored [42] video traces so far.\n",
+      "->Downloading [17] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129051.7536864.csv -j > output_video_traces.temp\n",
+      "Processed [3/20] search pages. Found and stored [59] video traces so far.\n",
+      "->Downloading [10] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129063.2279859.csv -j > output_video_traces.temp\n",
+      "Processed [4/20] search pages. Found and stored [69] video traces so far.\n",
+      "->Downloading [8] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129071.5539994.csv -j > output_video_traces.temp\n",
+      "Processed [5/20] search pages. Found and stored [77] video traces so far.\n",
+      "->Downloading [12] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129078.4436126.csv -j > output_video_traces.temp\n",
+      "Processed [6/20] search pages. Found and stored [89] video traces so far.\n",
+      "->Downloading [11] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129088.2198365.csv -j > output_video_traces.temp\n",
+      "Processed [7/20] search pages. Found and stored [100] video traces so far.\n",
+      "->Downloading [6] 360-degree video traces...\n",
+      "-->Running youtube-dl: youtube-dl -a videos\\1608129096.9929698.csv -j > output_video_traces.temp\n",
+      "Processed [8/20] search pages. Found and stored [106] video traces so far.\n",
+      "Execution interrupted: HTTP not OK: b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n    \"errors\": [\\n      {\\n        \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n        \"domain\": \"youtube.quota\",\\n        \"reason\": \"quotaExceeded\"\\n      }\\n    ]\\n  }\\n}\\n'\n"
      ]
     }
    ],
@@ -335,7 +332,7 @@
     "try:\n",
     "    \n",
     "    # Execute the program\n",
-    "    do_work(\"rollercoaster\", 20, video_ids_cache)\n",
+    "    do_work(\"360 education\", 20, video_ids_cache)\n",
     "    \n",
     "except Exception as e:\n",
     "    print(\"Execution interrupted: {0}\".format(e))"
@@ -343,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +348,7 @@
      "output_type": "stream",
      "text": [
       "Writing found video IDs to cache...\n",
-      "Done. Total video traces cached: [32]\n"
+      "Done. Total video traces cached: [388]\n"
      ]
     }
    ],
@@ -387,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
