Implemented trace and cache merger tool

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -12,8 +12,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: requests in /home/manzi/.anaconda3/lib/python3.8/site-packages (2.24.0)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
       "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
       "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/.anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "def read_json_from_file(directory, filename):\n",
-    "    with open(os.path.join(directory, filename)) as json_file:\n",
+    "    with open(os.path.join(directory, filename), encoding=\"utf-8\") as json_file:\n",
     "        data = json.load(json_file)\n",
     "        \n",
     "    return data"
@@ -82,7 +82,7 @@
     "    if (filename is None):\n",
     "        filename = '{0}.json'.format(time.time())\n",
     "\n",
-    "    with open(os.path.join(directory, filename), 'w') as f:\n",
+    "    with open(os.path.join(directory, filename), 'w', encoding=\"utf-8\") as f:\n",
     "        json.dump(data, f, ensure_ascii=False)"
    ]
   },
@@ -100,7 +100,7 @@
     "    \n",
     "    file_path = os.path.join(directory, filename)\n",
     "    \n",
-    "    with open(file_path, 'w') as f:\n",
+    "    with open(file_path, 'w', encoding=\"utf-8\") as f:\n",
     "        for item in video_ids:\n",
     "            f.write(\"http://www.youtube.com/watch?v={0}\".format(item))\n",
     "            f.write(\"\\r\\n\")\n",
@@ -198,7 +198,7 @@
     "    !{bashCommand}\n",
     "    \n",
     "    # Open output_video_details file and make a proper array out of it\n",
-    "    with open(\"output_video_traces.temp\") as temp_file:\n",
+    "    with open(\"output_video_traces.temp\", encoding=\"utf-8\") as temp_file:\n",
     "        json_strings = temp_file.readlines()\n",
     "\n",
     "        json_array = []\n",
@@ -285,34 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed [1/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [2/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [3/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [4/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [5/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [6/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [7/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [8/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [9/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [10/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [11/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [12/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [13/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [14/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [15/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [16/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [17/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [18/20] search pages. Found and stored [0] video traces so far.\n",
-      "Processed [19/20] search pages. Found and stored [0] video traces so far.\n",
       "Execution interrupted: HTTP not OK: b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n    \"errors\": [\\n      {\\n        \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n        \"domain\": \"youtube.quota\",\\n        \"reason\": \"quotaExceeded\"\\n      }\\n    ]\\n  }\\n}\\n'\n"
      ]
     }
@@ -324,7 +305,7 @@
     "try:\n",
     "    \n",
     "    # Execute the program\n",
-    "    do_work(\"music\", 20, video_ids_cache)\n",
+    "    do_work(\"360 charity\", 20, video_ids_cache)\n",
     "    \n",
     "except Exception as e:\n",
     "    print(\"Execution interrupted: {0}\".format(e))"
@@ -340,7 +321,7 @@
      "output_type": "stream",
      "text": [
       "Writing found video IDs to cache...\n",
-      "Done. Total video traces cached: [245]\n"
+      "Done. Total video traces cached: [32]\n"
      ]
     }
    ],
