WIP. Structure for training and saving TGAN models

--- a/notebooks/dataset_merging.ipynb
+++ b/notebooks/dataset_merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get external traces tuple (to be merged)\n",
-    "ext_trace_ids, ext_trace_dict = get_traces(os.path.join('..', 'merge_sets', 'traces'))\n",
+    "ext_trace_ids, ext_trace_dict = get_traces(os.path.join('..', 'merge_sets', 'tracesold'))\n",
     "# Internal traces tuple (to be merged to)\n",
     "int_trace_ids, int_trace_dict = get_traces('traces')\n",
     "\n",
@@ -93,14 +93,23 @@
     "for ID in unique_ext_ids:\n",
     "    unique_merge_traces.append(ext_trace_dict.get(ID))\n",
     "    \n",
-    "write_json_to_file(\"traces\", unique_traces, 'merged_{0}.json'.format(time.time()))"
+    "write_json_to_file(\"traces\", unique_merge_traces, 'merged_{0}.json'.format(time.time()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set to merge is same size as id difference count? True\n",
+      "Merged set is same size as expected? True\n"
+     ]
+    }
+   ],
    "source": [
     "# Check successfulness of merge\n",
     "\n",
@@ -110,12 +119,12 @@
     "\n",
     "union_traces_size = len(ext_trace_dict) + len(int_trace_dict) - len(ext_trace_ids.intersection(int_trace_ids))\n",
     "\n",
-    "print(\"Merged set is same size as expected? {}\".format(len(full_set) == union_traces_size))"
+    "print(\"Merged set is same size as expected? {}\".format(len(full_ids_set) == union_traces_size))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
